--- a/hw8/stocks/angular-app/src/app/components/nav/nav.component.html
+++ b/hw8/stocks/angular-app/src/app/components/nav/nav.component.html
@@ -1,41 +1,25 @@
-<div>
-	<p>nav works!</p>
-	<ul ngbNav #nav="ngbNav" [(activeId)]="active" class="nav-tabs">
-	  <li [ngbNavItem]="1">
-	    <a ngbNavLink>One</a>
-	    <ng-template ngbNavContent>
-	      <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth
-	        master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro
-	        keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat
-	        salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
-	    </ng-template>
-	  </li>
-	  <li [ngbNavItem]="2">
-	    <a ngbNavLink>Two</a>
-	    <ng-template ngbNavContent>
-	      <p>Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko
-	        farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts
-	        ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar
-	        helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson
-	        8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester
-	        stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.</p>
-	    </ng-template>
-	  </li>
-	  <li [ngbNavItem]="3">
-	    <a ngbNavLink>Three</a>
-	    <ng-template ngbNavContent>
-	      <p>Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id diam. Nulla facilisi.
-	        Donec egestas ligula vitae odio interdum aliquet. Duis lectus turpis, luctus eget tincidunt eu, congue et odio.
-	        Duis pharetra et nisl at faucibus. Quisque luctus pulvinar arcu, et molestie lectus ultrices et. Sed diam urna,
-	        egestas ut ipsum vel, volutpat volutpat neque. Praesent fringilla tortor arcu. Vivamus faucibus nisl enim, nec
-	        tristique ipsum euismod facilisis. Morbi ut bibendum est, eu tincidunt odio. Orci varius natoque penatibus et
-	        magnis dis parturient montes, nascetur ridiculus mus. Mauris aliquet odio ac lorem aliquet ultricies in eget
-	        neque. Phasellus nec tortor vel tellus pulvinar feugiat.</p>
-	    </ng-template>
-	  </li>
-	</ul>
 
-	<div [ngbNavOutlet]="nav" class="mt-2"></div>
+<nav class="navbar navbar-expand-lg navbar-dark mb-3" style="background-color: var(--indigo)">
+  <a class="navbar-brand" [routerLink]="'.'">Stock Search</a>
 
-	<pre>Active: {{ active }}</pre>
-</div>
+  <!-- Step 3: Toggle the value of the property when the toggler button is clicked. -->
+  <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
+    &#9776;
+  </button>
+
+  <!-- Step 2: Add the ngbCollapse directive to the element below. -->
+  <div [ngbCollapse]="isMenuCollapsed" class="collapse navbar-collapse ">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <!-- Step 4: Close the menu when a link is clicked. -->
+        <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Search</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Watchlist</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" [routerLink]="'.'" (click)="isMenuCollapsed = true">Portfolio</a>
+      </li>
+    </ul>
+  </div>
+</nav>
