--- a/hw8/stocks/angular-app/src/app/app.component.html
+++ b/hw8/stocks/angular-app/src/app/app.component.html
@@ -1,6 +1,3 @@
 <div>
-  <app-nav></app-nav>
-  <h1>STOCK SEARCH</h1>
-  <app-search></app-search>
-  <!-- <router-outlet></router-outlet> -->
+  <router-outlet></router-outlet>
 </div>
