exploring more routing options

--- a/hw8/stocks/angular-app/src/app/details/details.component.html
+++ b/hw8/stocks/angular-app/src/app/details/details.component.html
@@ -1,5 +1,5 @@
 <div>
-  <app-nav [active] = 0></app-nav>
+  <app-nav></app-nav>
   <h1>{{ticker}}<span class="glyphicon glyphicon-star-empty"></span></h1>
   <mat-tab-group>
     <mat-tab label="First"> Content 1 </mat-tab>
