--- a/hw8/stocks/angular-app/src/app/components/search/search.component.css
+++ b/hw8/stocks/angular-app/src/app/components/search/search.component.css
@@ -29,6 +29,10 @@
 .input-group-append {
     margin-top: -2px;
 }
+input:focus{
+	border-color: var(--indigo); 
+	outline: 0 none;
+}
 
 /* clears the ‘X’ from Internet Explorer */
 input[type=search]::-ms-clear { display: none; width : 0; height: 0; }
