--- a/hw8/stocks/angular-app/src/app/details/details.component.css
+++ b/hw8/stocks/angular-app/src/app/details/details.component.css
@@ -2,8 +2,15 @@ h1{
 	font-size:2.5rem;
 	font-weight: bold;
 }
-fa-icon{
+h1 fa-icon{
 	vertical-align: .5rem;
 	font-size: 1.5rem;
 	margin-top:10px;
+}
+
+.bg-success{
+	background-color: rgba(40, 167, 69, .25) !important;
+}
+.bg-failure{
+	background-color: rgba(220, 53, 69, .25) !important;
 }
