--- a/hw8/stocks/angular-app/src/app/details/details.component.html
+++ b/hw8/stocks/angular-app/src/app/details/details.component.html
@@ -45,7 +45,7 @@
 		  				<div class="row">Bid Size: {{bidSize}}</div>
   	 				</div>
   				</div>
-  				<div class="container">
+  				<div class="col">
 	  				<div class="row"><h3 class='col text-center font-weight-bold'>Company's Description</h3></div>
 	  				<div class="row">Start Date: {{startDate}}</div>
 	  				<div class="row">{{desc}}</div>
@@ -54,8 +54,9 @@
 	  	 	<div class="col chart_col">
 	  	 		<highcharts-chart 
 				  [Highcharts]="Highcharts"
-				  [(update)]="updateFlag"
+				  [update]="updateFlag"
 				  [options]="chartOptions"
+				  [oneToOne]="true"
 				></highcharts-chart>
 	  	 	</div>
 		  </div>
