footer corrected and news cards reimplemented roughly

--- a/hw8/stocks/angular-app/src/app/components/nav/nav.component.html
+++ b/hw8/stocks/angular-app/src/app/components/nav/nav.component.html
@@ -15,10 +15,10 @@
         <a class="nav-link" [routerLink]="'/'" (click)="isMenuCollapsed = true">Search</a>
       </li>
       <li class="nav-item" [routerLinkActive]="['active']">
-        <a class="nav-link" [routerLink]="'/Watchlist'" (click)="isMenuCollapsed = true">Watchlist</a>
+        <a class="nav-link" [routerLink]="'/watchlist'" (click)="isMenuCollapsed = true">Watchlist</a>
       </li>
       <li class="nav-item" [routerLinkActive]="['active']">
-        <a class="nav-link" [routerLink]="'/Portfolio'" (click)="isMenuCollapsed = true">Portfolio</a>
+        <a class="nav-link" [routerLink]="'/portfolio'" (click)="isMenuCollapsed = true">Portfolio</a>
       </li>
     </ul>
   </div>
