--- a/hw8/stocks/angular-app/src/app/app.component.html
+++ b/hw8/stocks/angular-app/src/app/app.component.html
@@ -1,3 +1,4 @@
-<div>
+<div style='min-height: 100%;  position: relative; padding-bottom: 60px'>
   <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </div>
