--- a/hw8/stocks/angular-app/src/app/components/search/search.component.css
+++ b/hw8/stocks/angular-app/src/app/components/search/search.component.css
@@ -33,6 +33,9 @@ input:focus{
 	border-color: var(--indigo); 
 	outline: 0 none;
 }
+mat-progress-spinner{
+	width:100%;
+}
 
 /* clears the ‘X’ from Internet Explorer */
 input[type=search]::-ms-clear { display: none; width : 0; height: 0; }
