api requests every 15 seconds on details page

--- a/hw8/stocks/angular-app/src/app/watchlist/watchlist.component.html
+++ b/hw8/stocks/angular-app/src/app/watchlist/watchlist.component.html
@@ -10,4 +10,7 @@
 		  <div class="col-5"> </div>
 		</div>
 	</div>
+	<div  class='container' *ngIf="!spin">
+		<h2 class='row'>My Watchlist</h2>
+	</div>
 </div>
