style changes and no change case

--- a/hw8/stocks/angular-app/src/app/components/footer/footer.component.html
+++ b/hw8/stocks/angular-app/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer">
       <div class="container">
-        <span class="text-muted">Powered by tiingo. Developed by Frank Pol</span>
+        <span>Powered by tiingo. Developed by Frank Pol.</span>
       </div>
     </footer>
