--- a/hw8/stocks/angular-app/src/app/components/footer/footer.component.css
+++ b/hw8/stocks/angular-app/src/app/components/footer/footer.component.css
@@ -1,9 +1,10 @@
 .footer {
     position: absolute;
+    color:black;
     bottom: 0;
     width: 100%;
     height: 60px;
     line-height: 60px;
-    background-color: #f5f5f5;
+    background-color: #DCDCDC;
     text-align: center;
 }
