--- a/hw8/stocks/angular-app/src/app/components/nav/nav.component.html
+++ b/hw8/stocks/angular-app/src/app/components/nav/nav.component.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark mb-3" style="background-color: var(--indigo); color:white;">
-  <a class="navbar-brand" [routerLink]="'.'">Stock Search</a>
+  <a class="navbar-brand" [routerLink]="''">Stock Search</a>
 
   <!-- Step 3: Toggle the value of the property when the toggler button is clicked. -->
   <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed">
