--- a/hw8/stocks/angular-app/src/app/details/details.component.html
+++ b/hw8/stocks/angular-app/src/app/details/details.component.html
@@ -1,19 +1,5 @@
 <div style='min-height: 100%;  position: relative; padding-bottom: 60px'>
   <app-nav></app-nav>
-
-<!--   <div class="container text-center alert alert-success alert-dismissible fade show " role="alert">
-    {{ticker}} Added to watchlist.
-      <button type="button" class="close" data-hide="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-  </div>
-
-  <div class="container text-center alert alert-danger alert-dismissible fade show " role="alert">
-    {{ticker}} Removed from watchlist.
-      <button type="button" class="close" data-hide="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-  </div> -->
   <div  class='container  text-center'>
     <alert></alert>
   </div>
@@ -71,41 +57,41 @@
 
 
   <div class="container" *ngIf='validResponse'>
-  	 <div class="row">
-  	 	<h1 class="col" >{{ticker}}<span style="color:{{starColor}}"><fa-icon (click)="toggleStar()" [icon]="faStar" ></fa-icon></span></h1>
+  	 <div class="row compact-row">
+  	 	<h1 class="col " >{{ticker}}<span style="color:{{starColor}}"><fa-icon (click)="toggleStar()" [icon]="faStar" ></fa-icon></span></h1>
 
       <!-- green or red text -->
-      <h1 *ngIf='!noChange' class="col" [className]="changePositive ? 'text-success' : 'text-danger'" style='text-align: right'>{{price| currency:'string':''}}</h1>
+      <h1 *ngIf='!noChange' class="col $img_names" [className]="changePositive ? 'text-success' : 'text-danger'" style='text-align: right'>{{price| currency:'string':''}}</h1>
       
       <!-- black text -->
-      <h1 *ngIf='noChange' class="col" style='color:black; text-align: right'>{{price| currency:'string':''}}</h1>
+      <h1 *ngIf='noChange' class="col $img_names" style='color:black; text-align: right'>{{price| currency:'string':''}}</h1>
   	 </div>
-  	 <div class="row">
+  	 <div class="row compact-row">
   	 	<h2 class="col text-muted">{{name}}</h2>
 
       <!-- green or red numbers -->
-      <h2 *ngIf='!noChange' class="col" [className]="changePositive ? 'text-success' : 'text-danger'" style='text-align: right; '> <fa-icon [icon]="faCaret"></fa-icon> {{change| number:'1.2-2'}} ( {{changePercent| percent:'.2-2'}} ) </h2>
+      <h2 *ngIf='!noChange' [className]="changePositive ? 'text-success' : 'text-danger'" style='text-align: right; '> <fa-icon [icon]="faCaret"></fa-icon> {{change| number:'1.2-2'}} ( {{changePercent| percent:'.2-2'}} ) </h2>
 
       <!-- black numbers -->
-      <h2 *ngIf='noChange' class="col" style='text-align: right; '> {{change| number:'1.2-2'}} ( {{changePercent| percent:'.2-2'}} ) </h2>
+      <h2 *ngIf='noChange' style='text-align: right; '> {{change| number:'1.2-2'}} ( {{changePercent| percent:'.2-2'}} ) </h2>
 
   	 </div> 
-  	 <div class="row">
+  	 <div class="row compact-row">
   	 	<h3 class="col text-muted">{{exchange}}</h3>
-  	 	<h3 class="col text-muted" style='text-align: right'>{{date}}</h3>
+  	 	<h3 class="text-muted" style='text-align: right'>{{date}}</h3>
   	 </div>
-  	 <div class="row">
+  	 <div class="row compact-row">
   	 	<div class='col'>
   	 		<button class='btn-sm btn btn-success' (click)="open(content)">Buy</button>
   	 	</div>
   	 </div>
-  	 <div class="row">
+  	 <div class="row mt-4">
   	 	<div class="col"></div>
-  	 	<h6 [className]="marketStatus ? 'bg-success align-self-center' : 'bg-danger align-self-center'">{{market}}</h6>
+  	 	<h5 [className]="marketStatus ? 'bg-success text-success align-self-center' : 'bg-danger text-danger align-self-center'">{{market}}</h5>
   	 	<div class="col"></div>
   	 </div> 
   	<h2></h2>
-	<mat-tab-group mat-stretch-tabs>
+	<mat-tab-group mat-stretch-tabs (click)="chartTabClick(false)">
 	  <mat-tab label="Summary">
 		  <div class="row">
 	  	 	<div class="col info_col">
@@ -132,33 +118,34 @@
   				</div>
 	  	 	</div>
 	  	 	<div class="col chart_col">
-			  <highcharts-chart
-			    [Highcharts]="Highcharts"
-			    [constructorType]="'stockChart'"
-			    [options]="chartOptions"
-			    [update]="updateFlag"
-				[oneToOne]="true">
-			  </highcharts-chart>
+  			  <highcharts-chart
+  			    [Highcharts]="Highcharts"
+  			    [constructorType]="'stockChart'"
+  			    [options]="chartOptions"
+  			    [update]="updateFlag"
+  				  [oneToOne]="true">
+  			  </highcharts-chart>
 	  	 	</div>
 		  </div>
 	  </mat-tab>
-	  <mat-tab label="Top News">
+	  <mat-tab label="Top News" (click)="chartTabClick(false)">
 	  	<div class='container'>
 			<div *ngFor="let card of cards; index as i; let odd=odd">
-				<div *ngIf='odd' class='news-row row'>
-					<app-card [rawCardData]=cards[i] class="card col-sm-12 col-md-6 pr-md-0 " ></app-card>
-					<app-card *ngIf="i + 1 < cards.length" [rawCardData]=cards[i+1] class="card col-sm-12 col-md-6 pr-md-0 " ></app-card>
+				<div *ngIf='odd' class='news-row row justify-content-center'>
+					<app-card [rawCardData]=cards[i] class='col-md-5'></app-card>
+          <!-- <div class='col-md-1'></div> -->
+					<app-card *ngIf="i + 1 < cards.length" [rawCardData]=cards[i+1] class='col-md-5'></app-card>
 				</div>
 			</div>
 		</div>
 	  </mat-tab>
-	  <mat-tab label="Charts">
+	  <mat-tab label="Charts" (click)="chartTabClick(true)">
 		  <highcharts-chart
 		    [Highcharts]="Highcharts2" 
 		    [constructorType]="'stockChart'"
 		    [options]="chartOptions2"
 		    [update]="updateFlag2"
-			[oneToOne]="true">
+			  [oneToOne]="true">
 		  </highcharts-chart>
 	  </mat-tab>
 	</mat-tab-group>
